--- a/style.css
+++ b/style.css
@@ -6,27 +6,32 @@ div .form {
 }
 
 .table {
-  font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  margin: 25px 0;
+  font-size: 0,9 em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-.table td, .table th {
-  border: 1px solid #ddd;
-  padding: 8px;
+.table thead tr{
+background-color: #009879;
+color: #ffffff;
+text-align: left;
 }
 
-.table tr:nth-child(even){background-color: #f2f2f2;}
-
-.table tr:hover {background-color: #ddd;}
-
-.table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #04AA6D;
-  color: white;
+.table th, .table td {
+  padding: 12px 15px;
 }
+
+.table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.table tbody tr:nth-of-type(even){
+  background-color: #f3f3f3;
+}
+
 
 input[type=text], select {
   width: 100%;
